--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>hot rest</title>
+    <title>friend finder</title>
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery.js"></script>
@@ -23,6 +23,6 @@
         </div>
     </div>
     <div class="links">
-            <a href="#">API Table Link</a> |
-            <a href="#">API Wait List</a> |
+            <a href="#">API Friends List</a> |
+            <a href="#">Github Repo</a> 
     </div>
