--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>hot rest</title>
+    <title>friend finder</title>
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery.js"></script>
@@ -123,7 +123,8 @@
                     </select>
                     <hr class="rainbow">
                     <h1>Question 9</h1>
-                    <p>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</p>
+                    <p>You think that everyone’s views should be respected regardless of whether they are supported by facts
+                        or not.</p>
                     <select class="form-control">
                         <option>Select an option</option>
                         <option>1 (Strongly Agree)</option>
@@ -145,13 +146,131 @@
                     </select>
                     <hr class="rainbow">
                     <div class="wrapper">
-                            <a href="#" class="rainbow-button" alt="Submit"></a>
+                        <a href="#" class="rainbow-button" alt="Submit"></a>
                     </div>
                 </form>
             </div>
         </div>
 
         <div class="links">
-            <a href="#">API Table Link</a> |
-            <a href="#">API Wait List</a> |
+            <a href="#">API Friends List</a> |
+            <a href="#">Github Repo</a>
         </div>
+    </div>
+</div>
+<div id="resultsModal" class="modal fade" role="dialog">
+
+    <div class="modal-dialog">
+
+        <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h2 class="modal-title">
+                    <strong>Best Match</strong>
+                </h2>
+            </div>
+
+            <div class="modal-body">
+                <h2 id="matchName"></h2>
+                <img id="matchImg" src="" alt="">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<!-- End of Container  -->
+</body>
+<script type="text/javascript">
+    $(document).ready(function () {
+        var config = {
+            '.chosen-select': {},
+            '.chosen-select-deselect': {
+                allow_single_deselect: true,
+            },
+            '.chosen-select-no-single': {
+                disable_search_threshold: 10,
+            },
+            '.chosen-select-no-results': {
+                no_results_text: 'Nothing found!',
+            },
+            '.chosen-select-width': {
+                width: "95%",
+            }
+        }
+        for (var selector in config) {
+            $(selector).chosen(config[selector]);
+        }
+        // Capture the form inputs //
+        $("#submit").on("click", function () {
+            //isValid is automatically set to true // 
+            var isValid = true;
+            // Form validation
+            function validateForm() {
+                //if form-control is blank then invalid is changed to false //
+                $('.form-control').each(function () {
+                    if ($(this).val() === '')
+                        isValid = false;
+                });
+                //if chosen select is blank then isvalid is changed to false //
+                $('.chosen-select').each(function () {
+                    if ($(this).val() === "")
+                        isValid = false
+                })
+                return isValid;
+            };
+            // If all required fields are filled
+            // if (validateForm() == true){
+            if (isValid) {
+                // Create an object for the user's data // 
+                var userData = {
+                    name: $("#name").val(),
+                    photo: $("#photo").val(),
+                    scores: [
+                        $("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val(),
+                    ]
+                }
+                $("#name").val("");
+                $("#photo").val("");
+                $("#q1").val("");
+                $("#q2").val("");
+                $("#q3").val("");
+                $("#q4").val("");
+                $("#q5").val("");
+                $("#q6").val("");
+                $("#q7").val("");
+                $("#q8").val("");
+                $("#q9").val("");
+                $("#q10").val("");
+                console.log("This is userData.scores: " + userData.scores);
+                // Grab the URL of the website // 
+                var currentURL = window.location.origin;
+                $.post(currentURL + '/api/friends', userData, function (data) {
+                    // Grab the result from the AJAX post so that the best match's name and photo are displayed. // 
+                    $("#matchName").text(data.name);
+                    $('#matchImg').attr("src", data.photo);
+                    // Show the modal with the best match 
+                    $("#resultsModal").modal('toggle');
+                    console.log("This is data: " + data.name);
+                    console.log("user data: " + userData);
+                });
+            } else {
+                alert("You did not fill out all the fields in the form.");
+            }
+            $('#close').on('click', function () {
+                $.get('/survey', function (req, res) {
+                    $(".body").load(res);
+                });
+            });
+            return false;
+        }); // end of on click // 
+    }); // end of document ready //
+</script>
+
+
+</body>
+
+</html>
